syntax = "proto3";

option csharp_namespace = "BatchesBranchMicroservice";

package BatchesBranchMicroservice;

service BatchesBranch {
  rpc Get (GetDataToProcessRequest) returns (GetDataToProcessResponse);
  rpc Process(ProcessBatchRequest) returns (ProcessBatchResponse);
}

message GetDataToProcessRequest {
  int64 flowId = 1;
}

message GetDataToProcessResponse {

}

message ProcessBatchRequest {
  int64 flowId = 1;
}

message ProcessBatchResponse {

}