syntax = "proto3";

option csharp_namespace = "PanelsBranchMicroservice";

package PanelsBranchMicroservice;

// The greeting service definition.
service PanelsBranch {
  // Sends a greeting
  rpc Get (GetPanelRequest) returns (GetPanelResponse);
}

message GetPanelRequest {
  string userId = 1;
}

message GetPanelResponse {

}